# exact-cover

./: .coveragerc  .gitattributes  .pylintrc  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
algo/: __init__.py
assets/: Screenshot from 2022-01-02 21-00-15.csv  Screenshot from 2022-01-06 13-35-44.csv  opencv_sudoku_puzzle_sudoku_puzzle-768x817.csv
computer_vision/: .gitignore  Untitled.ipynb
cover/: __init__.py  incidence.py  io.py  link.py  links.py  test_wiki.py
exact_cover/: __init__.py  cli.py
exact_cover/cover/: __init__.py  base.py  incidence.py  links.py
exact_cover/hitting_set/: incidence.py  links.py
exact_cover/solve/: __init__.py  base.py  knuth.py  linprog.py
exact_cover/sudoku/: __init__.py  base.py  cv.py  incidence.py  links.py  ocr.py  types.py  util.py
hitting_set/: incidence.py  links.py  test_wiki.py  wiki.json
notebooks/: Computer Vision.ipynb
sudoku/: __init__.py  incidence.py  links.py  test_wiki.py  wiki.csv
tests/: test_cover.py  test_cv.py  test_hitting_set.py  test_sudoku.py  wiki.csv  wiki.json
